--- a/tris/style.css
+++ b/tris/style.css
@@ -16,11 +16,15 @@
   display: flex;
   align-items: center;
 }
-
 .instructions img {
   width: 30px;
   height: 30px;
   margin-right: 5px;
+}
+
+.winner {
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .container > * {
