Forms: edit html template

--- a/05-forms/styles-contact-module.css
+++ b/05-forms/styles-contact-module.css
@@ -38,6 +38,10 @@ textarea {
   height: 5em;
 }
 
+input[type="checkbox"] {
+  width: 20px;
+}
+
 .button {
   padding-left: 90px; /* same size as the label elements */
 }
