--- a/05-forms/styles-contact-module.css
+++ b/05-forms/styles-contact-module.css
@@ -9,6 +9,19 @@ form {
   border-radius: 1em;
 }
 
+fieldset {
+  position: relative;
+}
+
+legend {
+  position: absolute;
+  top: -10px;
+  left: 10px;
+  background-color: #000;
+  color: #fff;
+  padding: 0 5px;
+}
+
 p + p {
   margin-top: 1em;
 }
@@ -20,7 +33,8 @@ label {
 }
 
 input,
-textarea {
+textarea,
+select {
   font: 1em sans-serif;
   width: 300px;
   box-sizing: border-box;
@@ -28,9 +42,16 @@ textarea {
 }
 
 input:focus,
-textarea:focus {
+textarea:focus
+select:focus {
   outline-style: solid;
   outline-color: #000;
+}
+
+input:user-invalid,
+textarea:user-invalid,
+select:user-invalid {
+  border: 1px solid red;
 }
 
 textarea {
@@ -61,4 +82,21 @@ li label {
 
 li input {
   width: auto;
+}
+
+/* error message styles */
+.error {
+  width: 100%;
+  padding: 0;
+
+  font-size: 80%;
+  color: white;
+  background-color: #900;
+  border-radius: 0 0 5px 5px;
+
+  box-sizing: border-box;
+}
+
+.error.active {
+  padding: 0.3em;
 }
